k8s.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kawaii-reward-merkle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kawaii-reward-merkle
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: kawaii-reward-merkle
    spec:
      containers:
        - name: kawaii-reward-merkle
          image: kawaiiislands/kawaii-reward-merkle:1.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: docker-secret
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: kawaii-reward-merkle
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: kawaii-reward-merkle

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kawaii-reward-merkle
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: developers.kawaii.global
      http:
        paths:
          - pathType: Prefix
            path: "/reward-merkle"
            backend:
              service:
                name: kawaii-reward-merkle
                port:
                  number: 3000
